--- a/JogoFase3Ingles.html
+++ b/JogoFase3Ingles.html
@@ -457,44 +457,44 @@
 				obstaculos.desenha();
 					if (bloco.score >= 3){
 					ctx.fillStyle = "black"
-					ctx.fillRect(20, 120, 560, 160);
+					ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 					ctx.fillStyle = "white"
-					ctx.fillRect(25, 125, 550, 150);
+					ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 					ctx.font = "20px Arial"
 					ctx.fillStyle = "black";
-					ctx.fillText("- We managed to reduce the dirt a lot and the administration", 25, 150);
-					ctx.fillText(" called the government, which fixed the posts and the", 25, 175);
-					ctx.fillText(" landscape of the square!", 25, 200)
+					ctx.fillText("- We managed to reduce the dirt a lot and the administration", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+					ctx.fillText(" called the government, which fixed the posts and the", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+					ctx.fillText(" landscape of the square!", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80)
 
 					ctx.fillStyle = "red";
 					ctx.fillRect(20, 20, 100, 100);
 					}
 					else if (bloco.score >= 2){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- In addition, now it is a good option for those", 25, 150);
-						ctx.fillText(" who want to take a more pleasant walk, alone", 25, 175);
-						ctx.fillText(" or with the family.", 25, 200);
+						ctx.fillText("- In addition, now it is a good option for those", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+						ctx.fillText(" who want to take a more pleasant walk, alone", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+						ctx.fillText(" or with the family.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
 					}
 					else if (bloco.score >= 1){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- Now that we've improved this plaza, lots of fun activities", 25, 150);
-						ctx.fillText(" are popping up for the community! Like the group", 25, 175);
-						ctx.fillText(" Tempo de planta, which is making a crowd to plant trees.", 25, 200);
-						ctx.fillText("  A great environmental education for all ages", 25, 225);
-						ctx.fillText(" and I have already planted Aroeira Santa and Ipê Branco.", 25, 250);
+						ctx.fillText("- Now that we've improved this plaza, lots of fun activities", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+						ctx.fillText(" are popping up for the community! Like the group", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+						ctx.fillText(" Tempo de planta, which is making a crowd to plant trees.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80);
+						ctx.fillText("  A great environmental education for all ages", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 105);
+						ctx.fillText(" and I have already planted Aroeira Santa and Ipê Branco.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 130);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
@@ -502,12 +502,12 @@
 
 					else if (bloco.score >= 0){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- What a beautiful place!", 25, 150);
+						ctx.fillText("- What a beautiful place!", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
