--- a/jogoFase3.html
+++ b/jogoFase3.html
@@ -457,44 +457,44 @@
 				obstaculos.desenha();
 					if (bloco.score >= 3){
 					ctx.fillStyle = "black"
-					ctx.fillRect(20, 120, 560, 160);
+					ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 					ctx.fillStyle = "white"
-					ctx.fillRect(25, 125, 550, 150);
+					ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 					ctx.font = "20px Arial"
 					ctx.fillStyle = "black";
-					ctx.fillText("- Conseguirmos diminuir bastante a sujeira e a administração", 25, 150);
-					ctx.fillText(" acionou o governo, que consertou os postes e a paisagem", 25, 175);
-					ctx.fillText(" da praça!", 25, 200)
+					ctx.fillText("- Conseguirmos diminuir bastante a sujeira e a administração", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+					ctx.fillText(" acionou o governo, que consertou os postes e a paisagem", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+					ctx.fillText(" da praça!", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80)
 
 					ctx.fillStyle = "red";
 					ctx.fillRect(20, 20, 100, 100);
 					}
 					else if (bloco.score >= 2){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- Além disso, agora ela é uma boa opção para quem", 25, 150);
-						ctx.fillText(" quer fazer uma caminhada mais agradável, sozinho ou com", 25, 175);
-						ctx.fillText(" a família.", 25, 200);
+						ctx.fillText("- Além disso, agora ela é uma boa opção para quem", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+						ctx.fillText(" quer fazer uma caminhada mais agradável, sozinho ou com", 25, LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+						ctx.fillText(" a família.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
 					}
 					else if (bloco.score >= 1){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- Agora que melhoramos essa praça, muitas atividades diver-", 25, 150);
-						ctx.fillText(" tidas estão aparecendo para a comunidade! Como o grupo", 25, 175);
-						ctx.fillText(" Tempo de plantar, que está fazendo um multirão para plantar", 25, 200);
-						ctx.fillText(" árvores. Uma ótima educação ambiental para todas as", 25, 225);
-						ctx.fillText(" idades e já plantei Aroeira Santa e Ipê Branco.", 25, 250);
+						ctx.fillText("- Agora que melhoramos essa praça, muitas atividades diver-", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
+						ctx.fillText(" tidas estão aparecendo para a comunidade! Como o grupo", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+						ctx.fillText(" Tempo de plantar, que está fazendo um multirão para plantar", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80);
+						ctx.fillText(" árvores. Uma ótima educação ambiental para todas as", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 105);
+						ctx.fillText(" idades e já plantei Aroeira Santa e Ipê Branco.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 130);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
@@ -502,12 +502,12 @@
 
 					else if (bloco.score >= 0){
 						ctx.fillStyle = "black"
-						ctx.fillRect(20, 120, 560, 160);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 95, ALTURA / 2 - jogar.altura / 2 + 1, 560, 160);
 						ctx.fillStyle = "white"
-						ctx.fillRect(25, 125, 550, 150);
+						ctx.fillRect(LARGURA / 2 - jogar.largura / 2 - 90, ALTURA / 2 - jogar.altura / 2 + 5, 550, 150);
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
-						ctx.fillText("- Que lugar lindo!", 25, 150);
+						ctx.fillText("- Que lugar lindo!", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
 
 						ctx.fillStyle = "red";
 						ctx.fillRect(20, 20, 100, 100);
