--- a/JogoFase1Ingles.html
+++ b/JogoFase1Ingles.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=0.7">
 	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<style>
@@ -25,7 +26,7 @@
 
 		// Sprites que se movimentam atras do perrsonagem]
 		fundo_arbustoPer = {
-			y: 398, // localização no eixo y
+			y: 461, // localização no eixo y
 			x: 600, // localização no eixo x
 			altura: 116, // altura do sprite
 			velocidade: 7, // velocidade que fará ao se deslocar
