--- a/introducao.html
+++ b/introducao.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.7">
         <title>Tratamento de imagem</title>
         <style>
             p{
