--- a/jogoFase2.html
+++ b/jogoFase2.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=0.7">
 	<title> Teste </title>
 	<script src = "Sprite.js"></script>
 	<style>
