--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
 	<title> Teste 123 </title>
 	<script src = "SpriteMenu.js"></script>
