--- a/jogoIdioma.html
+++ b/jogoIdioma.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
 <head>
-	<meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=0.7">
+	<meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<style>
        img{
             position: relative;
             top: 0px; /* 768px é o 100% do tamanho da janela*/
-            left: 320px; /* 1720px é o 100% do tamanho da janela*/
-            right: 50px;
         }
 
       div#opcoes{
                 position: absolute; /* diz a posição do div*/
                 top: 375px; /* 768px é o 100% do tamanho da janela*/
-                left: 550px; /* 1720px é o 100% do tamanho da janela*/
+                left: 250px; /* 1720px é o 100% do tamanho da janela*/
                 right: 0px;
                 color: white; /* cor da letra */
                 background: red; /* cor do fundo */
@@ -27,7 +25,7 @@
 		div#jogar{
                 position: absolute; /* diz a posição do div*/
                 top: 250px; /* 768px é o 100% do tamanho da janela*/
-                left: 550px; /* 1720px é o 100% do tamanho da janela*/
+                left: 250px; /* 1720px é o 100% do tamanho da janela*/
                 right: 0px;
                 color: white; /* cor da letra */
                 background: blue; /* cor do fundo */
